--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,6 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Katibeh&family=Nothing+You+Could+Do&family=Raleway:wght@200;300;400;500;600;700&display=swap");
 
 /* Common Styles */
+html {
+  scroll-behavior: smooth;
+}
+
 .section {
   width: 100vw;
   height: 100vh;
@@ -195,7 +199,6 @@ a.event {
   color: #fff;
   border: none;
   position: relative;
-  align-items: flex-;
 }
 
 .event-title {
@@ -245,7 +248,7 @@ a.event {
 .event:hover .event-title {
   width: 100%;
   transition: width 1.5s 0.5s;
-  color: red;
+  color: rgba(255, 0, 0, 0.61);
   margin-top: 1.5rem;
 }
 
@@ -256,7 +259,7 @@ a.event {
 .event:hover .event-description {
   opacity: 1;
   visibility: visible;
-  transition: opacity 1s 1s;
+  transition: opacity 0.7s 0.7s ease;
   position: absolute;
   bottom: 3vw;
   left: 2rem;
@@ -270,6 +273,22 @@ a.event {
 
 #google-calendar {
   width: 80%;
+}
+
+.calendar {
+  margin: 1rem;
+  padding: 1rem;
+}
+
+.calendar-navigate,
+.calendar-title,
+.day-name,
+.day {
+  color: #fff;
+}
+
+.calendar-footer {
+  visibility: hidden;
 }
 /* End of Events */
 
