--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -273,7 +273,9 @@ a.event {
 
 iframe {
   width: 100%;
+  height: 600px;
   background-color: black;
+  overflow: scroll;
 }
 /* End of Events */
 
@@ -375,17 +377,10 @@ iframe {
   color: red;
 }
 
-.form {
-  font-size: 20px;
+#contact-form iframe {
+  height: 425px;
 }
 
-#form-submit {
-  margin: 0;
-}
-
-.fab {
-  font-size: 34px;
-}
 /* End of Visit Us */
 
 /* Responsive Styles */
