--- a/src/App.css
+++ b/src/App.css
@@ -306,7 +306,7 @@ a.btn-primary {
 
 a.event {
   width: 400px;
-  height: 450px;
+  height: 400px;
   margin: 1rem;
   text-decoration: none;
   color: #fff;
@@ -316,6 +316,37 @@ a.event {
   justify-content: center;
   align-items: center;
   position: relative;
+}
+
+.event:hover {
+  cursor: pointer;
+}
+
+.event:hover::after {
+  width: 400px;
+}
+
+.event-image {
+  width: 400px;
+  height: 360px;
+}
+
+.event:hover .event-image {
+  filter: blur(0.5rem);
+  opacity: 1;
+  transition: filter 1.1s ease;
+}
+
+#dark-layer-event {
+  width: 400px;
+  height: 360px;
+  background-color: rgba(0, 0, 0, 0.582);
+  position: absolute;
+}
+
+.event:hover #dark-layer-event {
+  transition: opacity scale 1.1s ease;
+  transform: scale(1.2);
 }
 
 .event-info {
@@ -334,54 +365,17 @@ a.event {
   letter-spacing: 3px;
 }
 
-.event-description {
-  font-size: 18px;
-  letter-spacing: 2px;
-  margin: 1.5rem;
-  font-weight: 200;
-}
-
-.event-image {
-  width: 400px;
-  height: 360px;
-  transition: all 0.5s;
-}
-
-#dark-layer-event {
-  width: 450px;
-  height: 460px;
-  background-color: rgba(0, 0, 0, 0.582);
-  position: absolute;
-}
-
-.event:hover {
-  cursor: pointer;
-}
-
-.event:hover::after {
-  width: 400px;
-}
-
-.event:hover .event-image {
-  transform: scale(1.1);
-  filter: blur(0.5rem);
-  opacity: 1;
-}
-
-#dark-layer-event:hover {
-  opacity: 0;
-  transition: opacity 1.1s ease;
-  transform: scale(1.1);
-}
-
 .event:hover .event-title {
   width: 100%;
   transition: width 1.5s 0.5s;
   margin-top: 1.5rem;
 }
 
-.event:hover {
-  transition: opacity 0.7s 0.7s ease;
+.event-description {
+  font-size: 18px;
+  letter-spacing: 2px;
+  margin: 1.5rem;
+  font-weight: 200;
 }
 
 .event-btn {
@@ -495,6 +489,12 @@ a.event {
   font-size: 20px;
   text-decoration: none;
   color: black;
+}
+
+.contact-method a:hover {
+  cursor: pointer;
+  text-decoration: underline;
+  text-underline-offset: 5px;
 }
 
 /* End of Visit Us */
